Update README.md
Explication de configuration d'eclipse